traefik-2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system

spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
